# nilakandi

./: .dockerignore  .gitattributes  .gitignore  README.md  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
.devcontainer/: README.md  docker-compose.yml
.devcontainer/db/: devcontainer.json
.devcontainer/python/: devcontainer.OLD  devcontainer.json
.docker/: docker-compose.yml
.docker/web/: Dockerfile
.github/: dependabot.yml
assets/css/: style.css
assets/js/: script.js
config/: asgi.py  urls.py  wsgi.py
config/django/: base.py  local.py  production.py
config/settings/: azure.py  celery.py  logging.py  redis.py
nilakandi/: admin.py  apis.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
nilakandi/azure/: models.py
nilakandi/azure/api/: costexport.py  services.py
nilakandi/helper/: azure_api.py  azure_blob.py  miscellaneous.py  report_generation.py  report_source_select.py  serve_data.py
nilakandi/management/commands/: entry_point.py  grab_from_azure.py  populate_db.py
nilakandi/templates/: base.html  blank.html  home.html  htmxExample.html  navbar.html  servicesCost.html  subscriptions.html  subsreport.html
nilakandi/templates/base/home/: home.html
nilakandi/templates/base/services/: services.html
nilakandi/templates/base/subscription_reports/: subsreport.html
nilakandi/templates/base/subscriptions/: subscription_details.html  subscriptions.html
nilakandi/templates/partials/: generate_report_form.html  navbar.html
nilakandi/templates/partials/htmx/: htmxForm.html  htmxList.html
