[project]
name = "nilakandi"
version = "0.1.0"
description = "One stop solution for cloud cost report generator"
authors = [{ name = "koetjeengdjalanan", email = "martinsambulare@gmail.com" }]
license = { text = "NTT Data Ltd." }
readme = "README.md"
requires-python = ">=3.11,<4"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
django = "^5.1.7"
django-bootstrap5 = "^25.1.0"
django-environ = "^0.12.0"
django-extensions = "^3.2.3"
django-redis = "^5.4.0"
azure-identity = "1.20.0"
azure-mgmt-costmanagement = "4.0.1"
azure-mgmt-consumption = "10.0.0"
azure-mgmt-subscription = "3.1.1"
azure-mgmt-compute = "34.0.0"
azure-storage-blob = "12.25.0"
celery = "~5.4.0"
tenacity = "~9.0.0"
psycopg2 = "~2.9.10"
psycopg2-binary = "~2.9.10"
pandas = "~2.2.3"
pydantic = "~2.10.6"
redis = "^5.2.1"
caseutil = "^0.7.2"
gevent = "^25.4.1"
jinja2 = "^3.1.6"
django-storages = {extras = ["azure"], version = "~1.14.6"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.9"
ipython = "^9.0.1"
djlint = "^1.36.4"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
